--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "final-countdown-game",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://Ivanvasiunin.github.io/final-countdown-game/",
